objects/MessageLive__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ending_Line__c</fullName>
        <label>Ending Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveMessageNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LiveMessage Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>MessageLives</relationshipLabel>
        <relationshipName>MessageLives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Retry__c</fullName>
        <label>Message Retry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Starting_Line__c</fullName>
        <label>Starting Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Message</fullName>
                </value>
                <value>
                    <fullName>Second Message</fullName>
                </value>
                <value>
                    <fullName>Third Message</fullName>
                </value>
                <value>
                    <fullName>Fourth Message</fullName>
                </value>
                <value>
                    <fullName>Customer Message</fullName>
                </value>
                <value>
                    <fullName>Options Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MessageLive</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Message__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ending_Line__c</columns>
        <columns>Starting_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ML-{0}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MessageLives</pluralLabel>
    <recordTypes>
        <fullName>DefaultCustomerMessage</fullName>
        <active>true</active>
        <label>DefaultCustomerMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>DefaultOptionMessage</fullName>
        <active>true</active>
        <label>DefaultOptionMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>MessageCustomCustomerMessage</fullName>
        <active>true</active>
        <label>MessageCustomCustomerMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>MessageCustomOptionMessage</fullName>
        <active>true</active>
        <label>MessageCustomOptionMessage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>